fix hidden date podcast on mobile version

--- a/front-end/src/podcast/podcast.scss
+++ b/front-end/src/podcast/podcast.scss
@@ -80,7 +80,6 @@
       position: absolute;
       top: 0;
       left: ($bs * 2.45);
-      display: none;
       color: $col05;
     }
 
